# pygsearch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
pygsearch/: __init__.py  gsearch.py
tests/: test_gsearch.py  test_searchresult.py
